<resources>
    <string name="app_name">24awd</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_cars">Cars</string>
    <string name="nav_costs">Расходы</string>
    <string name="nav_buy">Купить запчасти</string>
    <string name="nav_doc">Документы</string>
    <string name="nav_help">Помощь на дороге</string>
    <string name="nav_lacation">Локация</string>
    <string name="nav_coordinates">Мои координаты</string>
    <string name="nav_sos">SOS</string>
    <string name="nav_instruction">ДТП</string>
    <string name="addcar_model">Модель и марка</string>
    <string name="addcar_vin">VIN - номер</string>
    <string name="addcar_capacity">Объем двигателя</string>
    <string name="addcar_power">Мощность (л.с.)</string>
    <string name="addcar_year">Год выпуска</string>
    <string name="addcar_mileage">Общий пробег (км.)</string>
    <string name="addcar_mileageperday">Средний пробег за день (км.)</string>
    <string name="coordinates_message">Сообщение</string>
    <string name="coordinates_addphoto">Добавить фото</string>
    <string name="dtp_title1">Инструкция об оформлении ДТП по «Европротоколу»</string>
    <string name="dtp_title2">Вступительное слово</string>
    <string name="dtp_content1">«Европротокол» («Европейский протокол») – это оформление документов о ДТП без вызова сотрудников полиции. Иными словами, это возможность самостоятельно зафиксировать факт дорожно-транспортного происшествия (ДТП) с тем, чтобы в дальнейшем обратиться в страховую компанию за получением возмещения, и оперативно разъехаться, не создавая заторов на дороге. Такая практика широко применяется во многих странах мира, ежегодно экономит водителям тысячи часов и активно развивается в России.   «Европротокол» позволяет оформить ДТП без вызова сотрудников ГИБДД. Действует во всех регионах РФ. Данной процедурой можно воспользоваться, если в происшествие произошло в результате столкновения не более двух автомобилей; не был причинен вред жизни и здоровью водителей, пешеходов, пассажиров; не был нанесен ущерб другому имуществу, кроме автомобилей участников ДТП; если ответственность каждого из водителей на момент ДТП была застрахована по договору ОСАГО, заключенному в отношении именно того ТС, при использовании которого произошло ДТП авария; если у участников ДТП нет разногласий относительно обстоятельств ДТП и перечня и характера повреждений автомобилей. Максимальный размер возмещения (при условии, что договоры обоих участников заключены не ранее 2 августа 2014 года) составляет 50 000 руб. (25 000 руб., если хотя бы один из договоров заключен ранее 2 августа 2014 года). При этом с 1 октября 2014 года вступает в силу так называемый «безлимитный европротокол», которым можно воспользоваться, если ДТП произошло на территории Москвы, Московской области, Санкт-Петербурга или Ленинградской области и факт ДТП зафиксирован с помощью фото- или видеосъемки транспортных средств и их повреждений, а также имеются данные о положении транспортных средств при ДТП, зафиксированные с применением технологий глобальных спутниковых навигационных систем. Требования к устройствам для фиксирования этой информации и к тому, каким образом ее следует передавать страховщику, чтобы защититься от возможных мошеннических действий, устанавливаются Правительством Российской Федерации. При соблюдении данных условий – максимальная сумма возмещения составит 400 тыс. руб. Если автомобиль одного или обоих водителей зарегистрирован не в РФ, то «Европротоколом» можно воспользоваться в случае, если гражданская ответственность водителя/ей застрахована по системе «Зелёная карта». В этом случае за более подробной информацией о порядке и процедуре урегулирования претензии необходимо обращаться в Информационный центр «Зеленая карта» РСА по телефону + 7(495) 641 27 87.</string>
    <string name="dtp_title3">Инструкция по оформлению Европротокола</string>
    <string name="dtp_content2">1. Чётко следуйте ПДД. Остановитесь, выставьте знак аварийной остановки. 2. Сохраните следы ДТП. Примите все возможные меры к сохранению следов и предметов на месте ДТП. 3. В случае возникновения конфликтных ситуаций с другим водителем, вызывайте ГИБДД (02, 112, 911). 4. Заполните бланк Извещения о ДТП, который был Вам выдан в страховой компании при оформлении договора ОСАГО. Желательно, использовать шариковую ручку. Это необходимо для того, чтобы информация, вносимая Вами на лицевой стороне Извещения о ДТП, четко отпечатывалась на нижнем листке. Оба водителя заполняют одно Извещение о ДТП. Один водитель заполняет колонку «А», другой ― колонку «В». Заполняются как оборотная, так и лицевая его стороны. При этом оборотная сторона Извещения о ДТП заполняется каждым водителем на его экземпляре после заполнения лицевой стороны и разъединения бланка Извещения о ДТП.</string>
    <string name="dtp_title4">Лицевая сторона Извещения о ДТП</string>
    <string name="dtp_content3">На лицевой стороне Извещения о ДТП должна содержаться информация о месте, дате, времени ДТП, сведения об участниках аварии, о свидетелях, о страховщиках, о характере и перечне видимых поврежденных деталей и элементов, обстоятельствах ДТП и т.п. (то есть необходимо заполнить все графы и поля, имеющиеся на лицевой стороне бланка Извещения о ДТП) В п. 14 указываются характер и перечень всех видимых повреждений деталей автомобиля. Описывайте их максимально точно и кратко. Следите, чтобы другой водитель не добавил в указанный пункт не относящиеся к данному ДТП повреждения деталей и элементов. При указании поврежденного элемента (детали) обязательно укажите характер видимого повреждения: царапина, вмятина (деформация), разрыв (трещина). Невидимые (скрытые) повреждения будут выявлены и описаны при осмотре автомобиля экспертами. В п. 15 «Замечания» при необходимости Вы можете дополнительно привести сведения о том, что не указано в пункте 16 «Обстоятельства ДТП». В п. 16 отмечаются обстоятельства ДТП, а в крупных клетках, расположенных внизу, заполняется число отмеченных подпунктов (клеток). Важно правильно отразить маневры Вашего авто, учитывая, что:  стоянка — это не остановка. Если Вы остановились, например, на красный сигнал светофора, ошибочно отмечать позицию 1 «На стоянке». Нужно отметить позицию 22 «Остановился (стоял) на запрещающий сигнал светофора»;  если один автомобиль обгонял другой, перестраиваясь из одной полосы в другую, нужно отметить поз. 12 «Менял полосу» и поз. 13 «Обгонял». В п. 17 составляется схема ДТП. На схеме обозначаются контуры проезжей части с указанием названий улиц (дорог и т.д.), а также направление движения, конечноеположение ТС «А» и ТС «В», дорожные знаки, указатели, светофоры, дорожная разметка, предметы, которые имеют отношение к данному ДТП. В п. 18 оба водителя ставят свои подписи. После заполнения лицевой стороны участники ДТП разделяют бланки Извещения о ДТП на два экземпляра. Проследите, чтобы другой водитель подписал оба листа Извещения о ДТП с лицевой стороны, а не только экземпляр, который остается у него. Обратите внимание, что на лицевой стороне Извещения о ДТП каждый из участников должен поставить две подписи – в пункте 15 и 18.</string>
    <string name="dtp_title5">Оборотная сторона Извещения о ДТП</string>
    <string name="dtp_content4">Оборотная сторона Извещения о ДТП заполняется каждым из водителей самостоятельно. Если не хватает места, изложите сведения на чистом листе бумаги и приложите его к Извещению о ДТП (на котором нужно сделать пометку «С приложением»), а также укажите, к какому документу оно прилагается и кем оно составлено. На приложениях должны стоять подписи обоих водителей. В пустых графах ставьте длинные прочерки либо большую букву Z. Если бланк Извещения о ДТП порван, испорчен или трудно читаем, нужно заполнить новый бланк. После подписания и разъединения бланков не допускается никаких изменений, исправлений или дополнений. Если второй водитель отказывается подписывать Извещение о ДТП или совместно его заполнить, то это означает, что Европротокол оформить невозможно, и нужно вызывать ГИБДД. Обратите внимание на то, что, если после подписания и разъединения бланков извещения о ДТП необходимо внести в документ корректировки или дополнения, они должны быть заверены подписями обоих участников ДТП. 5. Свидетели. Соберите контактные данные свидетелей ДТП, если это возможно. Обязательно сохраните запись системы видеорегистрации. 6. Страховые выплаты. После выполнения всех перечисленных выше действий, место ДТП можно покинуть. Если Вы намерены обратиться с заявлением о страховой выплате, то приложите к заявлению Ваш экземпляр Извещения о ДТП. Если Вы считаете, что оснований для возмещения нанесенного Вам вреда не имеется, то обязательно, в течение 5 рабочих дней с момента ДТП отправьте заполненное Извещение о ДТП (с дополнениями, если они есть) своему страховщику ОСАГО. Обратите внимание на то, что нельзя приступать к ремонту ТС в течение 15 дней с момента ДТП либо без письменного согласования на то страховой компании.</string>
    <string name="dtp_title6">Лимит выплат по Европротоколу составляет:</string>
    <string name="dtp_content5">1) 25 тыс. руб. – если хотя бы один из договоров ОСАГО участников ДТП заключен до 02.08.2014; 2) 50 тыс. руб. – если договоры обоих участников заключены после 02.08.2014; 3) с 1 октября 2014 г. — 400 тыс. руб. (см. «Вступительное слово»).</string>
    <string name="location_addphoto">Добавить фото</string>
    <string name="main_title">Сервисное обслуживание</string>
    <string name="main_costs">показать расходы и историю обслуживания</string>
    <string name="main_dtp">ДТП</string>
    <string name="main_docs">ДОКУМЕНТЫ</string>
    <string name="main_help">Помощь на дороге</string>
    <string name="main_coordinates">Мои координаты</string>
    <string name="main_sos">SOS</string>
    <string name="main_lacation">Локация</string>
    <string name="main_order">Заказать услугу</string>
    <string name="main_site">НА САЙТ 24AWD</string>
    <string name="main_order2">Заказать запчасти</string>
    <string name="order_name">Пожалуйста, представьтесь</string>
    <string name="order_phone">Номер телефона</string>
    <string name="order_message">Сообщение</string>
    <string name="order_addphoto">Добавить фото</string>
    <string name="costs_datefilter">Фильтр по дате</string>
    <string name="costs_mileagefilter">Фильтр по пробегу</string>
    <string name="addcost_name">Наименование</string>
    <string name="addcost_price">Стоимость (руб.)</string>
    <string name="addcost_comment">Комментарий</string>
    <string name="addcost_date">Дата:</string>
    <string name="adddoc_title">Название</string>
    <string name="adddoc_to">До:</string>
    <string name="addparam_title">Название</string>
    <string name="addparam_price">Стоимость замены (руб.)</string>
    <string name="addparam_limit">Лимит эксплуатации (км.)</string>
    <string name="addparam_lastdate">Дата последней замены:</string>
    <string name="addtab_title">Название</string>
    <string name="editcar_title">Название</string>
    <string name="editcost_title">Наименование</string>
    <string name="editcost_price">Стоимость (руб.)</string>
    <string name="editcost_comment">Комментарий</string>
    <string name="filtercostsbymileage_mileage">Километраж</string>
    <string name="mileage_title">Пробег</string>
    <string name="replaceparam_price">Стоимость замены (руб.)</string>
    <string name="raplaceparam_date">Дата последней замены:</string>
    <string name="addtab_add">add</string>
    <string name="addtab_addtitle">Добавить</string>
    <string name="doc_to">До:</string>
    <string name="param_replacedate">Дата замены:</string>
    <string name="param_zero">0</string>
    <string name="param_replacelimit">Лимит замены:</string>
    <string name="param_nextreplace">Следующая замена:</string>
    <string name="param_nextreplace2">Замена через:</string>
</resources>