<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="io.almayce.dev.app24awd.view.DtpActivity"
    tools:showIn="@layout/activity_dtp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="@dimen/space"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/rsa"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@null" />

            <TextView
                android:textSize="@dimen/text_large"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/dtp_title1"/>

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="@dimen/space"
                android:textSize="@dimen/text_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/dtp_title2"/>

            <TextView
                android:layout_marginTop="@dimen/space"
                android:textSize="@dimen/text_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/dtp_content1"/>

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="@dimen/space"
                android:textSize="@dimen/text_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/dtp_title3"/>

            <TextView
                android:layout_marginTop="@dimen/space"
                android:textSize="@dimen/text_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/dtp_content2"/>
            <TextView
                android:textStyle="bold"
                android:layout_marginTop="@dimen/space"
                android:textSize="@dimen/text_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/dtp_title4"/>

            <TextView
                android:layout_marginTop="@dimen/space"
                android:textSize="@dimen/text_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/dtp_content3"/>

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="@dimen/space"
                android:textSize="@dimen/text_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/dtp_title5"/>

            <TextView
                android:layout_marginTop="@dimen/space"
                android:textSize="@dimen/text_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/dtp_content4"/>

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="@dimen/space"
                android:textSize="@dimen/text_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/dtp_title6"/>

            <TextView
                android:layout_marginTop="@dimen/space"
                android:textSize="@dimen/text_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/dtp_content5"/>

            <ImageView
                android:layout_marginTop="@dimen/space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/example"
                android:contentDescription="@null" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
