<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="io.almayce.dev.app24awd.view.AddCarActivity"
    tools:showIn="@layout/activity_main"
    android:background="@android:color/white"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <LinearLayout
            android:padding="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space"
                    android:layout_marginRight="@dimen/space"
                    android:theme="@style/TextLabel">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etModel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/addcar_model"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space"
                android:layout_marginRight="@dimen/space"
                android:theme="@style/TextLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etVin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/addcar_vin"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space"
                android:layout_marginRight="@dimen/space"
                android:theme="@style/TextLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etCapacity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/addcar_capacity"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space"
                android:layout_marginRight="@dimen/space"
                android:theme="@style/TextLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/addcar_power"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space"
                android:layout_marginRight="@dimen/space"
                android:theme="@style/TextLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/addcar_year"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space"
                android:layout_marginRight="@dimen/space"
                android:theme="@style/TextLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etTotalMileage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/addcar_mileage"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space"
                android:layout_marginRight="@dimen/space"
                android:theme="@style/TextLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etDayMileage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/addcar_mileageperday"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabConfirm"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:src="@drawable/ic_check_white_24dp" />
</RelativeLayout>
